--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <body>
     <div class="nav-wrapper">
+       <img src="./img/meteor.png" class="img_animation" alt="">
+       <img src="./img/meteor2.png" class="img_animation" alt="">
+       <img src="./img/meteor3.png" class="img_animation" alt="">
+       <img src="./img/meteor4.png" class="img_animation" alt="">
         <div class="text_animation">
             <div class="word">Hi</div>
             <div class="word">My name is Thai</div>
@@ -22,16 +26,16 @@
             <div class="word">Thanks you <i class="fas fa-heart"></i></div>
             <div class="name">
                 <div class="test1">
-                    <span>L</span>
-                    <span>O</span>
-                    <span>V</span>
-                    <span>E</span>
+                    <span>1 0 1</span>
+                    <span>1 0 1 1 1 0 1 0 1</span>
+                    <span>1 1 1 0 1 1 1 0 1 1 1</span>
+                    <span>1 0 1 0 1 0 1 1 1</span>
                 </div>
                 <div class="test2">
-                    <span>H</span>
-                    <span>A</span>
-                    <span>T</span>
-                    <span>E</span>
+                    <span>1</span>
+                    <span>1 1 1 0 1 0 1 1 1 0 1 1 1</span>
+                    <span>1 1 1 0 1 1 1 0 1 1 1</span>
+                    <span>1 0 1 0 1 1 1</span>
                 </div>
             </div>
         </div>
