--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <body>
     <div class="nav-wrapper">
        <img src="./img/meteor.png" class="img_animation" alt="">
-       <img src="./img/meteor2.png" class="img_animation" alt="">
        <img src="./img/meteor3.png" class="img_animation" alt="">
        <img src="./img/meteor4.png" class="img_animation" alt="">
         <div class="text_animation">
@@ -40,6 +39,7 @@
             </div>
         </div>
         <nav>
+            <a href="./cv.html" title="My CV" class="hover-this"><span class="far fa-id-card"></span></a>
             <a href="https://www.facebook.com/thai.viet.7140" class="hover-this"><span
                     class="fab fa-facebook"></span></a>
             <a href="https://github.com/VThai99" class="hover-this"><span class="fab fa-github"></span></a>
