--- a/cv.html
+++ b/cv.html
@@ -43,9 +43,9 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                            <ul class="navbar-nav">
+                            <ul class="navbar-nav custom-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#objective">Objective</a>
+                                    <a class="nav-link" aria-current="page" href="#objective">Objective</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#education">Education</a>
@@ -54,19 +54,16 @@
                                     <a class="nav-link" href="#work-experience">Work experience</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Skills</a>
+                                    <a class="nav-link" href="#skill">Skills</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Activities</a>
+                                    <a class="nav-link" href="#certificate">Certifications</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Honors & Awards</a>
+                                    <a class="nav-link" href="#interest">Interests</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Certifications</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Interests</a>
+                                    <a class="nav-link" href="#project">Projects</a>
                                 </li>
                             </ul>
                         </div>
@@ -87,7 +84,7 @@
                     </div>
                 </div>
                 <div class="avata-cv col-md-4">
-                    <span><img src="./img/00a853fb034df713ae5c.jpg" alt=""></span>
+                    <span><img src="./img/avata.png" alt=""></span>
                 </div>
             </div>
 
@@ -172,20 +169,19 @@
                     <div class="tl-bg" style="background-image: url(./img/reactjs.jpg)"></div>
 
                     <div class="tl-year">
-                        <p class="f2 heading--sanSerif">2021</p>
+                        <p class="f2 heading--sanSerif">2021 - 2022</p>
                     </div>
-                    <div class="total-time">(8 month)</div>
+                    <div class="total-time">(More than 1 Year)</div>
                     <div class="tl-content">
                         <h1 class="f3 text--accent ttu">Mintpot Vina</h1>
                         <p>Frontend Developer (Reactjs)</p>
                     </div>
-
                 </div>
 
             </section>
 
             <div class="skill-activities-cv mt-5 row">
-                <div class="skills col-md-6 px-5" id="skills">
+                <div class="skills px-5" id="skill">
                     <div class="title-cv" id="skills">Skills</div>
                     <div class="skill-box-cv mt-4">
                         <div class="skill-item ">
@@ -193,7 +189,12 @@
                                 Code skills
                             </p>
                             <p class="fs-6 fw-light mb-0">
-                                
+                            <ul>
+                                <li>Front-End: HTML, CSS, SCSS, Bootstrap, React Bootstrap, Vuetify, Redux, Redux Saga,
+                                    VueX, ReactJs, VueJs.</li>
+                                <li>Back-End: JS(NodeJs), PHP(Laravel).</li>
+                                <li>Database: MySQL, PostgresSQL, SQL Server.</li>
+                            </ul>
                             </p>
                         </div>
                         <div class="skill-item mt-2">
@@ -210,21 +211,101 @@
                         </div>
                     </div>
                 </div>
-                <div class="activities col-md-6 px-5" id="activities">
-                    <div class="title-cv" id="activities">Activities</div>
+            </div>
+
+            <div class="skill-activities-cv mt-5 row">
+                <div class="skills px-5" id="certificate">
+                    <div class="title-cv" id="skills">Certificates</div>
+                    <div class="skill-box-cv mt-4">
+                        <div class="skill-item ">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Time</th>
+                                        <th>Certificate/ Degree</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>2021</td>
+                                        <td>The Degree Of Engineer Computer Science</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="skill-activities-cv mt-5 row">
+                <div class="skills px-5" id="interest">
+                    <div class="title-cv" id="skills">Interests</div>
+                    <div class="skill-box-cv mt-4">
+                        <div class="skill-item ">
+                            <ul>
+                                <li>Listening to music.
+                                </li>
+                                <li> Watching movie.
+                                </li>
+                                <li>Running.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="skill-activities-cv mt-5 row">
+                <div class="skills px-5" id="project">
+                    <div class="title-cv" id="skills">Projects</div>
+                    <div class="skill-box-cv mt-4">
+                        <div class="mt-3">
+                            <div class="project-name">The 330</div>
+                            <div class="project-time">(February 2022 - Now)</div>
+                            <div class="project-detail">
+                             <a href="http://3.36.60.44/" target="_blank" rel="noopener noreferrer">Link</a>
+                            </div>
+                        </div>
+                        <div class="mt-3">
+                            <div class="project-name">APL</div>
+                            <div class="project-time">(September 2021 - February 2022)</div>
+                            <div class="project-detail">
+                             <a href="https://user.asiapokerleague.com" target="_blank" rel="noopener noreferrer">Link</a>
+                            </div>
+                        </div>
+                        <div class="mt-3">
+                            <div class="project-name">Celebrity</div>
+                            <div class="project-time">(April 2021 - Oct 2021)</div>
+                            <div class="project-detail">
+                             <a href="http://celebrity-admin.s3-website.ap-northeast-2.amazonaws.com/apps/sales-live" target="_blank" rel="noopener noreferrer">Link</a>
+                            </div>
+                        </div>
+                        <div class="mt-3">
+                            <div class="project-name">Rabiz</div>
+                            <div class="project-time">(2021)</div>
+                            <div class="project-detail">
+                             <a href="https://rabbiz.io" target="_blank" rel="noopener noreferrer">Link</a>
+                            </div>
+                        </div>
+                        <div class="mt-3">
+                            <div class="project-name">API God</div>
+                            <div class="project-time">(2021)</div>
+                            <div class="project-detail">
+                             <a href="https://api-thaik.herokuapp.com/swagger/" target="_blank" rel="noopener noreferrer">Link</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
-    <!-- bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+        <!-- bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
