--- a/cv.html
+++ b/cv.html
@@ -133,22 +133,6 @@
 
             <div class="title-cv" id="work-experience">Work Experience</div>
             <section id="timeline">
-
-                <div class="tl-item">
-
-                    <div class="tl-bg" style="background-image: url(./img/dotnet.jpg)"></div>
-
-                    <div class="tl-year">
-                        <p class="f2 heading--sanSerif">2020</p>
-                    </div>
-                    <div class="total-time">(1 month)</div>
-                    <div class="tl-content">
-                        <h1>ITG ERP</h1>
-                        <p>Internship .Net developer</p>
-                    </div>
-
-                </div>
-
                 <div class="tl-item">
 
                     <div class="tl-bg" style="background-image: url(./img/vuejs.jpg)"></div>
@@ -177,7 +161,20 @@
                         <p>Frontend Developer (Reactjs)</p>
                     </div>
                 </div>
+                <div class="tl-item">
 
+                    <div class="tl-bg" style="background-image: url(./img/reactjs.jpg)"></div>
+
+                    <div class="tl-year">
+                        <p class="f2 heading--sanSerif">2022</p>
+                    </div>
+                    <div class="total-time">(3 month)</div>
+                    <div class="tl-content">
+                        <h1>CMC Global</h1>
+                        <p>Frontend Developer (ReactJs)</p>
+                    </div>
+
+                </div>
             </section>
 
             <div class="skill-activities-cv mt-5 row">
@@ -260,7 +257,7 @@
                     <div class="skill-box-cv mt-4">
                         <div class="mt-3">
                             <div class="project-name">The 330</div>
-                            <div class="project-time">(February 2022 - Now)</div>
+                            <div class="project-time">(February 2022 - April 2022)</div>
                             <div class="project-detail">
                              <a href="http://3.36.60.44/" target="_blank" rel="noopener noreferrer">Link</a>
                             </div>
