--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
     <meta name="google-site-verification" content="ha5gcFZLnrOCZbIu9gbp_qWFl6kHC1wKYx8sW8G9Jzk" />
     <meta charset="UTF-8">
+    <meta name="description" content="Learn more about vthai99, his professional projects, curriculum vitae, and relevant information as he seeks new job opportunities.">
+    <meta name="keywords" content="VThai99, vthai99">
+    <meta name="author" content="Viet Thai">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/style.css">
-    <title>Introduce</title>
+    <title>VThai99-Introduce</title>
 </head>
 
 <body>
